# csalt-main

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: todo.md
.github/workflows/: docs.yml  manual-prerelease.yml  rust.yml
csalt/: Cargo.toml
csalt-docs/: book.toml
csalt-docs/src/: SUMMARY.md  introduction.md
csalt/examples/zlib-ver/: .gitignore  README.md  Salt.toml
csalt/examples/zlib-ver/src/: main.c
csalt/src/: cli.rs  config.rs  fs_utils.rs  lib.rs  main.rs  old_build_sys.rs  util.rs
csalt/tests/: build_tests.rs
src/: cli.rs  config.rs  fs_utils.rs  lib.rs  main.rs  transpile.rs
