[package]
name = "csalt"
version = "0.11.0"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
documentation = "https://Escapee-Organization.github.io/csalt-book"

[[bin]]
name = "csalt"
path = "src/main.rs"

[dependencies]
dirs = "6.0"
semver = "1.0"
anyhow = "1.0"
toml = { version = "1.1" }
serde_json = { version = "1.0" }

clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

sha2 = { version = "0.11", optional = true }
self_update = { version = "0.44", optional = true }
tree-sitter = { version = "0.26", optional = true }
tree-sitter-c = { version = "0.24", optional = true }

reqwest = { version = "0.11", features = ["blocking"], optional = true }

[features]
default = []
experimental = ["reqwest", "self_update", "tree-sitter", "tree-sitter-c", "sha2"]
